# Homework_6

./: .gitignore  main.py  pyproject.toml  students.db
sql/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  students.sql
src/: config.py  create_db.py  fill_data.py
