[tool.poetry]
name = "homework-6"
version = "0.1.0"
description = ""
authors = ["Nyambevos <ruslan.bilokoniuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^24.1.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
